--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="./index.jsx"></script>
+    <script>{`
+      (function() {
+        var info = console.info
+        console.info = function (message) {
+          if (!/Download the React DevTools/.test(message)) info.apply(console, arguments) 
+        }
+      })()
+    `}</script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
