--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           if (!/Download the React DevTools/.test(message)) info.apply(console, arguments) 
         }
       })()
+      const getElement = ()=> {
+        return <% userId %>
+      }
     `}</script>
     <!--
       This HTML file is a template.
